--- a/folow_ops/ressources/templates/ressourcesDetails.html
+++ b/folow_ops/ressources/templates/ressourcesDetails.html
@@ -279,16 +279,17 @@
                             </div>
                             <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] mr-6">FlowOps</h2>
                             <nav class="flex items-center gap-4">
-                                <a href="#" class="nav-link">
+                                <a href="#" class="flex items-center gap-2 px-3 py-2 text-[#191610] text-sm font-medium hover:bg-[#f1efe9] rounded-full">
                                     <span>Tableau de bord</span>
                                 </a>
-                                <a href="#" class="nav-link nav-link-active"> <span>Ressources</span>
+                                <a href="#" class="flex items-center gap-2 px-3 py-2 text-[#191610] text-sm font-medium hover:bg-[#f1efe9] rounded-full">
+                                    <span>Tickets</span>
                                 </a>
-                                <a href="#" class="nav-link">
+                                <a href="#" class="flex items-center gap-2 px-3 py-2 text-[#191610] text-sm font-medium hover:bg-[#f1efe9] rounded-full">
                                     <span>Projets</span>
                                 </a>
-                                <a href="#" class="nav-link">
-                                    <span>Tickets</span>
+                                <a href="#" class="flex items-center gap-2 px-3 py-2 text-[#191610] text-sm font-medium bg-[#f1efe9] rounded-full">
+                                    <span>Ressources</span>
                                 </a>
                             </nav>
                         </div>
