l'ajout des calendrier

--- a/follow_ops/dashboard/templates/dashboard.html
+++ b/follow_ops/dashboard/templates/dashboard.html
@@ -284,7 +284,7 @@
                         <div class="activity-item">
                             <div class="activity-avatar" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCClaZNla2VNHXuP4EEYYlG4LkZLwYibWSxw8yzb3jGydK81D_AXUYkIFyinil-dc9nLIixSFYOYTnTHhPAgW7Rgol2xKBCRitPsQZieVpCouNpxeaDA1OI7g0YrTegaV3O8LYbFYa020XTuVl2BUh_ogXINAaMYgvy-Qf1gW_EwpSjARgbbgSpHrUHu2-NSkSyN6Hsnj4AV2VMoOKK1uqlaP9nCYh3DoUd0lAswDohEnIfDQFAkaDKUBLhl05fMAHKUp8zap8Bqv4")'></div>
                             <div class="flex flex-col">
-                                <p class="activity-text">Nouveau projet "Refonte CRM" créé par <span class="font-bold">Sara RIAD</span>(<span class="font-bold">BUILD</span>)</p>
+                                <p class="activity-text">Nouveau projet "Refonte CRM" créé par <span class="font-bold">Sara RIYAD</span>(<span class="font-bold">BUILD</span>)</p>
                                 <p class="activity-time">Il y a 4 heures</p>
                             </div>
                         </div>
