--- a/follow_ops/projects/templates/projects.html
+++ b/follow_ops/projects/templates/projects.html
@@ -56,6 +56,18 @@
         background-color: var(--nav-link-active-bg);
         color: var(--nav-link-active-color);
     }
+    .comment-bubble,
+    .comment-input-container {
+      width: 100%;
+      max-width: 100%;
+      border-radius: 0;
+      margin-left: 0;
+      margin-right: 0;
+    }
+    .flex.flex-col.gap-4.mt-6 {
+      width: 100%;
+      max-width: 100%;
+    }
   </style>
 </head>
 <body class="relative flex size-full min-h-screen flex-col bg-[#fbfaf9] group/design-root overflow-x-hidden font-['Inter','Noto_Sans',sans-serif]">
