--- a/follow_ops/ressources/templates/add_resource.html
+++ b/follow_ops/ressources/templates/add_resource.html
@@ -252,6 +252,14 @@
                                 <label for="availability" class="form-label">Disponibilité (%)</label>
                                 <input type="number" id="availability" name="availability" class="form-input" min="0" max="100" placeholder="Ex: 80" required>
                             </div>
+                            <div class="form-group">
+                                <label for="password" class="form-label">Mot de passe</label>
+                                <input type="password" id="password" name="password" class="form-input" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="confirm_password" class="form-label">Confirmer le mot de passe</label>
+                                <input type="password" id="confirm_password" name="confirm_password" class="form-input" required>
+                            </div>
                             <div class="form-group md:col-span-2">
                                 <label for="skills" class="form-label">Compétences (séparées par des virgules)</label>
                                 <textarea id="skills" name="skills" class="form-input h-24 resize-y" placeholder="Ex: React, Java, SQL, Gestion de projet"></textarea>
